k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typo3-svc
  namespace: cms-system
spec:
  selector:
    app: typo3
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
a
