k8s/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typo3
  namespace: cms-govstack
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: <acm-arn-for-*.cms.assembly.govstack.global>
spec:
  ingressClassName: alb
  rules:
    - host: institution.cms.assembly.govstack.global
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: typo3-svc
                port:
                  number: 80
    - host: portal.cms.assembly.govstack.global
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: typo3-svc
                port:
                  number: 80
    - host: '*.cms.assembly.govstack.global'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: typo3-svc
                port:
                  number: 80
